--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "echarts": "^6.0.0",
+    "element-plus": "^2.11.1",
+    "react-zdog": "^1.2.2",
+    "scss": "^0.2.4",
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.1",
+    "vuex": "^4.1.0",
+    "xe-utils": "^3.7.8",
+    "zdog": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +27,11 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.90.0",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.101.3"
   },
   "eslintConfig": {
     "root": true,
